--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -476,7 +476,7 @@ html .clear-completed:active {
 
 .info {
     margin: 65px auto 0;
-    color: #4d4d4d;
+    color: darkgray;
     font-size: 11px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     text-align: center;
